k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: barber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: auth-service
        image: auth-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: barber
spec:
  selector:
    app: auth-service
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
