k8s/barbers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barbers-service
  namespace: barber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barbers-service
  template:
    metadata:
      labels:
        app: barbers-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: barbers-service
        image: barbers-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: barbers-service
  namespace: barber
spec:
  selector:
    app: barbers-service
  ports:
    - port: 5003
      targetPort: 5003
  type: ClusterIP
