k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: barber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: frontend
        image: frontend-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: barber
spec:
  selector:
    app: frontend
  ports:
    - port: 5005
      targetPort: 5005
  type: ClusterIP
