k8s/monitoring-annotations.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: barber
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
    kiali.io/visibility: "true"
spec:
  selector:
    app: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
