k8s/mysql-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-auth
  namespace: barber
spec:
  selector:
    matchLabels:
      app: mysql-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-auth
    spec:
      containers:
      - name: mysql-auth
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-auth-storage
          mountPath: /var/lib/mysql
        args: ["--default-authentication-plugin=mysql_native_password"]
      volumes:
      - name: mysql-auth-storage
        persistentVolumeClaim:
          claimName: mysql-auth-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-auth
  namespace: barber
spec:
  selector:
    app: mysql-auth
  ports:
    - port: 3306
      targetPort: 3306
