k8s/products-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: barber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: products-service
        image: products-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: barber
spec:
  selector:
    app: products-service
  ports:
    - port: 5004
      targetPort: 5004
  type: ClusterIP
